--- a/dkd-admin/src/main/resources/application.yml
+++ b/dkd-admin/src/main/resources/application.yml
@@ -1,129 +1,63 @@
-# 项目相关配置
+# 项目相关配置（公共：名称、版本、版权）
 ruoyi:
-  # 名称
   name: RuoYi
-  # 版本
   version: 3.8.7
-  # 版权年份
   copyrightYear: 2024
-  # 文件路径 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
-  profile: D:/ruoyi/uploadPath
-  # 获取ip地址开关
+  # 获取ip地址开关（公共）
   addressEnabled: false
-  # 验证码类型 math 数字计算 char 字符验证
+  # 验证码类型（公共）
   captchaType: math
 
-# 开发环境配置
-server:
-  # 服务器的HTTP端口，默认为 8080
-  port: 8080
-  servlet:
-    # 应用的访问路径
-    context-path: /
-  tomcat:
-    # tomcat的URI编码
-    uri-encoding: UTF-8
-    # 连接数满后的排队数，默认为100
-    accept-count: 1000
-    threads:
-      # tomcat最大线程数，默认为200
-      max: 800
-      # Tomcat启动初始化的线程数，默认值10
-      min-spare: 100
-
-# 日志配置
+# 日志配置（公共：基础日志框架，级别在环境配置中覆盖）
 logging:
   level:
-    com.dkd: debug
-    org.springframework: warn
+    org.springframework: warn  # 第三方框架日志级别统一为warn
 
-# 用户配置
+# 用户配置（公共：密码重试、锁定规则）
 user:
   password:
-    # 密码最大错误次数
     maxRetryCount: 5
-    # 密码锁定时间（默认10分钟）
     lockTime: 10
 
-# Spring配置
+# Spring配置（公共部分）
 spring:
-  # 资源信息
+  # 资源信息（国际化，公共）
   messages:
-    # 国际化资源文件路径
     basename: i18n/messages
-  profiles:
-    active: druid
-  # 文件上传
+  # 文件上传（公共：单个/总文件大小限制）
   servlet:
     multipart:
-      # 单个文件大小
       max-file-size: 10MB
-      # 设置总上传的文件大小
       max-request-size: 20MB
-  # 服务模块
-  devtools:
-    restart:
-      # 热部署开关
-      enabled: true
-  # redis 配置
-  redis:
-    # 地址
-    host: localhost
-    # 端口，默认为6379
-    port: 6379
-    # 数据库索引
-    database: 0
-    # 密码
-    password:
-    # 连接超时时间
-    timeout: 10s
-    lettuce:
-      pool:
-        # 连接池中的最小空闲连接
-        min-idle: 0
-        # 连接池中的最大空闲连接
-        max-idle: 8
-        # 连接池的最大数据库连接数
-        max-active: 8
-        # #连接池最大阻塞等待时间（使用负值表示没有限制）
-        max-wait: -1ms
+  # 激活默认环境（开发环境，生产时通过命令行切换）
+  profiles:
+    active: dev
 
-# token配置
+  # 文件存储公共配置
+  file-storage:
+    # 默认存储平台（开发环境用local-1或dev-aliyun-oss-1，生产环境可改为aliyun-oss-1）
+    thumbnail-suffix: ".min.jpg"  # 缩略图后缀（所有环境通用）
+
+# Token配置（公共：密钥、有效期、请求头）
 token:
-  # 令牌自定义标识
   header: Authorization
-  # 令牌密钥
-  secret: abcdefghijklmnopqrstuvwxyz
-  # 令牌有效期（默认30分钟）
+  secret: abcdefghijklmnopqrstuvwxyz  # 生产环境建议修改为复杂密钥
   expireTime: 30
 
-# MyBatis配置
+# MyBatis配置（公共：别名、mapper路径）
 mybatis:
-  # 搜索指定包别名
   typeAliasesPackage: com.dkd.**.domain
-  # 配置mapper的扫描，找到所有的mapper.xml映射文件
   mapperLocations: classpath*:mapper/**/*Mapper.xml
-  # 加载全局的配置文件
   configLocation: classpath:mybatis/mybatis-config.xml
 
-# PageHelper分页插件
+# PageHelper分页插件（公共：方言、参数支持）
 pagehelper:
   helperDialect: mysql
   supportMethodsArguments: true
   params: count=countSql
 
-# Swagger配置
-swagger:
-  # 是否开启swagger
-  enabled: true
-  # 请求前缀
-  pathMapping: /dev-api
-
-# 防止XSS攻击
+# 防止XSS攻击（公共：过滤规则）
 xss:
-  # 过滤开关
   enabled: true
-  # 排除链接（多个用逗号分隔）
   excludes: /system/notice
-  # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
