--- a/dkd-common/pom.xml
+++ b/dkd-common/pom.xml
@@ -153,6 +153,12 @@
             <version>3.15.1</version>
         </dependency>
 
+        <!-- easyexcel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>4.0.3</version>
+        </dependency>
     </dependencies>
 
 </project>
